--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "vee-validate": "^2.0.0-beta.17",
     "vue": "^2.1.0"
   },
   "devDependencies": {
