--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "vue-i18n": "^4.10.0",
     "vue-loader": "^10.0.0",
     "vue-resource": "^1.0.3",
     "vue-template-compiler": "^2.1.0",
